Attempt to fix Flash of missing text on Mobile Safari

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -95,8 +95,9 @@
   padding: 12px;
   border: 1px solid var(--outline-color);
   background-color: var(--bg-color);
+  box-shadow: inset 0 0 4px var(--outline-color);
   /* box-shadow: inset 0 0 0 2px var(--bg-faded-color); */
-  filter: drop-shadow(0 2px 4px var(--bg-faded-color));
+  /* filter: drop-shadow(0 2px 4px var(--bg-faded-color)); */
 }
 .status-card:has(.status-badge:not(:empty)) {
   border-top-right-radius: 8px;
@@ -120,6 +121,10 @@
 }
 .status-card .card {
   display: none;
+}
+.timeline-deck .status-card .content.truncated:after {
+  /* Don't show "Read more" in status cards */
+  content: none !important;
 }
 
 @keyframes skeleton-breathe {
